# luadch

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  compile_with_mingw.bat  docker-compose.yml
.github/: release-body.md
.github/workflows/: release.yml  smoke.yml
adclib/: CMakeLists.txt  adclib.cpp
core/: adc.lua  bloom.lua  cert_bootstrap.lua  cfg.lua  cfg_defaults.lua  cfg_secret.lua  cfg_users.lua  const.lua  hbri.lua  http.lua  http_client.lua  http_events.lua  http_filter.lua  http_router.lua  hub.lua  hub_bot_object.lua  hub_dispatch.lua  hub_user_object.lua  init.lua  iostream.lua  out.lua  ratelimit.lua  scripts.lua  server.lua  sysinfo.lua  util.lua  util_http.lua
docker/: Dockerfile  entrypoint.sh
docs/: BUILDING.md  CONFIGURATION.md  DOCKER.md  HTTP_API.md  INSTALLING.md  PLUGIN_API.md  PLUGIN_SANDBOX_MIGRATION.md  SCRIPTS.md  SECURITY.md
docs/phases/: INTERLUDE_UPSTREAM_TRIAGE.md  INTERLUDE_UPSTREAM_TRIAGE_2.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_7_FINDINGS.md  PHASE_8A.md  PHASE_8B_DUAL_STACK.md  PHASE_8_IO.md
examples/certs/: make_cert.bat  make_cert.sh
examples/cfg/: cfg.tbl
examples/etc/other_available_scripts/: cmd_sid.lua  usr_hub_slot_ratio.lua
hub/: CMakeLists.txt  hub.c
lua/src/: CMakeLists.txt
luasec/: CMakeLists.txt
luasocket/: CMakeLists.txt
scripts/: bot_session_chat.lua  cmd_accinfo.lua  cmd_ban.lua  cmd_delreg.lua  cmd_disconnect.lua  cmd_errors.lua  cmd_gag.lua  cmd_hubinfo.lua  cmd_hubstats.lua  cmd_mass.lua  cmd_nickchange.lua  cmd_redirect.lua  cmd_reg.lua  cmd_reload.lua  cmd_restart.lua  cmd_setpass.lua  cmd_shutdown.lua  cmd_slots.lua  cmd_topic.lua  cmd_upgrade.lua  cmd_uptime.lua  cmd_usercleaner.lua  cmd_userinfo.lua  cmd_usersearch.lua  etc_banner.lua  etc_blacklist.lua  etc_cmdlog.lua  etc_hubcommands.lua  etc_keyprint.lua  etc_motd.lua  etc_msgmanager.lua  etc_records.lua  etc_regserver_announce.lua  etc_trafficmanager.lua  etc_unknown_command.lua  etc_userlogininfo.lua  hub_bot_cleaner.lua  hub_inf_manager.lua  hub_runtime.lua  hub_user_lastseen.lua  (+8 more)
scripts/lang/: cmd_accinfo.lang.de  cmd_accinfo.lang.en  cmd_delreg.lang.de  cmd_delreg.lang.en  cmd_gag.lang.de  cmd_gag.lang.en  cmd_hubinfo.lang.de  cmd_hubinfo.lang.en  cmd_mass.lang.de  cmd_mass.lang.en  cmd_restart.lang.de  cmd_restart.lang.en  cmd_setpass.lang.de  cmd_setpass.lang.en  cmd_shutdown.lang.de  cmd_shutdown.lang.en  cmd_usercleaner.lang.de  cmd_usercleaner.lang.en  cmd_usersearch.lang.de  cmd_usersearch.lang.en  etc_hubcommands.lang.de  etc_hubcommands.lang.en  etc_motd.lang.de  etc_motd.lang.en  etc_msgmanager.lang.de  etc_msgmanager.lang.en  etc_unknown_command.lang.de  etc_unknown_command.lang.en  hub_bot_cleaner.lang.de  hub_bot_cleaner.lang.en  usr_nick_length.lang.de  usr_nick_length.lang.en
slaxml/: LICENSE  README.md
tests/: README.md
tests/smoke/: run.py
tests/unit/: bloom_test.lua  hbri_test.lua  http_client_test.lua  http_filter_test.lua  http_router_test.lua  iostream_test.lua  lang_test.lua  usr_share_lang_test.lua  util_http_test.lua  util_safe_path_test.lua
zlib_stream/: CMakeLists.txt  zlib_stream.c
